# py-arithmetic

./: .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  build.py  hatch_build.py  pyproject.toml
.github/workflows/: python-package.yml
arithmetic/: _arithmetic.pyx
docs/: conf.py  requirements.txt
src/arithmetic/: _arithmetic.pyx
tests/: test_arithmetic.py
