[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.1.0"
name = "py-arithmetic"
description = "A sample cython wrapper"
readme = "README.rst"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
license-files = {paths = ["LICENSE"]}
authors = [{name = "Christophe Demko", email = "chdemko@gmail.com"}]

[tool.hatch.build]
include = [
  "src/**/*.py",
  "src/**/*.pyi",
  "src/**/py.typed"
]

[tool.hatch.build.targets.wheel]
packages = ["src/arithmetic"]
include = [
  "src/**/*.so"
]
exclude = [
  "src/arithmetic/c-arithmetic",
  "src/**/*.c",
  "src/**/*.pyx",
  "src/**/*.pxd"
]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = [
  "setuptools~=75.8",
  "Cython~=3.0"
]

[tool.hatch.build.targets.sdist]
packages = ["src"]
include = [
  "src/**/*.pyx",
  "src/**/*.pxd"
]
exclude = [
  "src/arithmetic/c-arithmetic",
  "src/**/*.c",
  "src/**/*.so"
]

[tool.hatch.envs.docs]
dependencies = [
  "Sphinx~=8.1",
  "sphinx-rtd-theme~=3.0",
  "sphinx-copybutton~=0.5",
  "nbsphinx~=0.9",
  "sphinxcontrib-plantuml~=0.30",
  "sphinx-autodoc-typehints~=3.0",
  "sphinx-codeautolink~=0.16"
]

[tool.hatch.envs.docs.scripts]
build = [
  "sphinx-build docs {args:build/sphinx/html}"
]

[tool.ruff]
# Allow lines to be as long as 88.
line-length = 88
target-version = "py310"
extend-exclude = ["src/arithmetic/c-arithmetic"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Missing type annotation for `self` in method
  "ANN101",
  # One-line docstring should fit on one line
  "D200",
  # Prefer absolute imports over relative imports
  "TID252",
  # Trailing comma missing
  "COM812",
  # Implicitly concatenated string literals on one line
  "ISC001"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  # Missing return type annotation for public function
  "ANN201",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public class
  "D101",
  # Missing docstring in public method
  "D102",
  # Missing docstring in public package
  "D104",
  # File is part of an implicit namespace package. Add an `__init__.py`
  "INP001",
  # Use a regular `assert` instead of unittest-style `assertEqual`
  "PT009",
  # Use `pytest.raises` instead of unittest-style `assertRaises`
  "PT027",
  # Name compared with itself
  "PLR0124",
  # Too many statements
  "PLR0915"
]
"docs/conf.py" = [
  # Variable is shadowing a Python builtin
  "A001",
  # File is part of an implicit namespace package. Add an `__init__.py`
  "INP001"
]

[tool.mypy]
exclude = ["src/arithmetic/c-arithmetic"]
